--- a/css/materialdesignicons.css
+++ b/css/materialdesignicons.css
@@ -1,8 +1,8 @@
 /* MaterialDesignIcons.com */
 @font-face {
   font-family: "Material Design Icons";
-  src: url("../fonts/materialdesignicons-webfont.eot?v=6.9.96");
-  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=6.9.96") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=6.9.96") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=6.9.96") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=6.9.96") format("truetype");
+  src: url("../fonts/materialdesignicons-webfont.eot?v=7.0.96");
+  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=7.0.96") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=7.0.96") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=7.0.96") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=7.0.96") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -150,6 +150,14 @@
   content: "\F12E0";
 }
 
+.mdi-account-card::before {
+  content: "\F1BA4";
+}
+
+.mdi-account-card-outline::before {
+  content: "\F1BA5";
+}
+
 .mdi-account-cash::before {
   content: "\F1097";
 }
@@ -216,6 +224,14 @@
 
 .mdi-account-cowboy-hat-outline::before {
   content: "\F17F3";
+}
+
+.mdi-account-credit-card::before {
+  content: "\F1BA6";
+}
+
+.mdi-account-credit-card-outline::before {
+  content: "\F1BA7";
 }
 
 .mdi-account-details::before {
@@ -572,6 +588,10 @@
 
 .mdi-air-purifier::before {
   content: "\F0D44";
+}
+
+.mdi-air-purifier-off::before {
+  content: "\F1B57";
 }
 
 .mdi-airbag::before {
@@ -1452,10 +1472,6 @@
 
 .mdi-android::before {
   content: "\F0032";
-}
-
-.mdi-android-messages::before {
-  content: "\F0D45";
 }
 
 .mdi-android-studio::before {
@@ -2514,6 +2530,10 @@
   content: "\F115C";
 }
 
+.mdi-artboard::before {
+  content: "\F1B9A";
+}
+
 .mdi-artstation::before {
   content: "\F0B5B";
 }
@@ -2582,6 +2602,10 @@
   content: "\F1AC5";
 }
 
+.mdi-atv::before {
+  content: "\F1B70";
+}
+
 .mdi-audio-input-rca::before {
   content: "\F186B";
 }
@@ -2628,6 +2652,14 @@
 
 .mdi-av-timer::before {
   content: "\F006B";
+}
+
+.mdi-awning::before {
+  content: "\F1B87";
+}
+
+.mdi-awning-outline::before {
+  content: "\F1B88";
 }
 
 .mdi-aws::before {
@@ -3482,6 +3514,10 @@
   content: "\F02E3";
 }
 
+.mdi-bed-clock::before {
+  content: "\F1B94";
+}
+
 .mdi-bed-double::before {
   content: "\F0FD4";
 }
@@ -4126,12 +4162,12 @@
   content: "\F00BF";
 }
 
-.mdi-book-variant-multiple::before {
-  content: "\F00BC";
-}
-
 .mdi-bookmark::before {
   content: "\F00C0";
+}
+
+.mdi-bookmark-box::before {
+  content: "\F1B75";
 }
 
 .mdi-bookmark-box-multiple::before {
@@ -4140,6 +4176,10 @@
 
 .mdi-bookmark-box-multiple-outline::before {
   content: "\F196D";
+}
+
+.mdi-bookmark-box-outline::before {
+  content: "\F1B76";
 }
 
 .mdi-bookmark-check::before {
@@ -4890,12 +4930,24 @@
   content: "\F0A31";
 }
 
+.mdi-calendar-alert-outline::before {
+  content: "\F1B62";
+}
+
 .mdi-calendar-arrow-left::before {
   content: "\F1134";
 }
 
 .mdi-calendar-arrow-right::before {
   content: "\F1135";
+}
+
+.mdi-calendar-badge::before {
+  content: "\F1B9D";
+}
+
+.mdi-calendar-badge-outline::before {
+  content: "\F1B9E";
 }
 
 .mdi-calendar-blank::before {
@@ -4930,24 +4982,48 @@
   content: "\F189D";
 }
 
+.mdi-calendar-collapse-horizontal-outline::before {
+  content: "\F1B63";
+}
+
 .mdi-calendar-cursor::before {
   content: "\F157B";
+}
+
+.mdi-calendar-cursor-outline::before {
+  content: "\F1B64";
 }
 
 .mdi-calendar-edit::before {
   content: "\F08A7";
 }
 
+.mdi-calendar-edit-outline::before {
+  content: "\F1B65";
+}
+
 .mdi-calendar-end::before {
   content: "\F166C";
+}
+
+.mdi-calendar-end-outline::before {
+  content: "\F1B66";
 }
 
 .mdi-calendar-expand-horizontal::before {
   content: "\F189E";
 }
 
+.mdi-calendar-expand-horizontal-outline::before {
+  content: "\F1B67";
+}
+
 .mdi-calendar-export::before {
   content: "\F0B24";
+}
+
+.mdi-calendar-export-outline::before {
+  content: "\F1B68";
 }
 
 .mdi-calendar-filter::before {
@@ -4962,12 +5038,28 @@
   content: "\F09D2";
 }
 
+.mdi-calendar-heart-outline::before {
+  content: "\F1B69";
+}
+
 .mdi-calendar-import::before {
   content: "\F0B25";
 }
 
+.mdi-calendar-import-outline::before {
+  content: "\F1B6A";
+}
+
 .mdi-calendar-lock::before {
   content: "\F1641";
+}
+
+.mdi-calendar-lock-open::before {
+  content: "\F1B5B";
+}
+
+.mdi-calendar-lock-open-outline::before {
+  content: "\F1B5C";
 }
 
 .mdi-calendar-lock-outline::before {
@@ -4976,6 +5068,10 @@
 
 .mdi-calendar-minus::before {
   content: "\F0D5C";
+}
+
+.mdi-calendar-minus-outline::before {
+  content: "\F1B6B";
 }
 
 .mdi-calendar-month::before {
@@ -4998,6 +5094,10 @@
   content: "\F0A32";
 }
 
+.mdi-calendar-multiselect-outline::before {
+  content: "\F1B55";
+}
+
 .mdi-calendar-outline::before {
   content: "\F0B67";
 }
@@ -5006,8 +5106,16 @@
   content: "\F00F3";
 }
 
+.mdi-calendar-plus-outline::before {
+  content: "\F1B6C";
+}
+
 .mdi-calendar-question::before {
   content: "\F0692";
+}
+
+.mdi-calendar-question-outline::before {
+  content: "\F1B6D";
 }
 
 .mdi-calendar-range::before {
@@ -5038,6 +5146,10 @@
   content: "\F094C";
 }
 
+.mdi-calendar-search-outline::before {
+  content: "\F1B6E";
+}
+
 .mdi-calendar-star::before {
   content: "\F09D3";
 }
@@ -5048,6 +5160,10 @@
 
 .mdi-calendar-start::before {
   content: "\F166D";
+}
+
+.mdi-calendar-start-outline::before {
+  content: "\F1B6F";
 }
 
 .mdi-calendar-sync::before {
@@ -5518,6 +5634,14 @@
   content: "\F07AA";
 }
 
+.mdi-car-search::before {
+  content: "\F1B8D";
+}
+
+.mdi-car-search-outline::before {
+  content: "\F1B8E";
+}
+
 .mdi-car-seat::before {
   content: "\F0FA4";
 }
@@ -5868,6 +5992,10 @@
 
 .mdi-cart-outline::before {
   content: "\F0111";
+}
+
+.mdi-cart-percent::before {
+  content: "\F1BAE";
 }
 
 .mdi-cart-plus::before {
@@ -7410,6 +7538,10 @@
   content: "\F0B7E";
 }
 
+.mdi-clouds::before {
+  content: "\F1B95";
+}
+
 .mdi-clover::before {
   content: "\F0816";
 }
@@ -8046,12 +8178,20 @@
   content: "\F0197";
 }
 
+.mdi-controller::before {
+  content: "\F02B4";
+}
+
 .mdi-controller-classic::before {
   content: "\F0B82";
 }
 
 .mdi-controller-classic-outline::before {
   content: "\F0B83";
+}
+
+.mdi-controller-off::before {
+  content: "\F02B5";
 }
 
 .mdi-cookie::before {
@@ -8646,6 +8786,10 @@
   content: "\F07BF";
 }
 
+.mdi-currency-uah::before {
+  content: "\F1B9B";
+}
+
 .mdi-currency-usd::before {
   content: "\F01C1";
 }
@@ -9098,14 +9242,6 @@
   content: "\F07C0";
 }
 
-.mdi-desktop-mac::before {
-  content: "\F01C4";
-}
-
-.mdi-desktop-mac-dashboard::before {
-  content: "\F09E8";
-}
-
 .mdi-desktop-tower::before {
   content: "\F01C5";
 }
@@ -9302,10 +9438,6 @@
   content: "\F0960";
 }
 
-.mdi-discord::before {
-  content: "\F066F";
-}
-
 .mdi-dishwasher::before {
   content: "\F0AAC";
 }
@@ -9363,11 +9495,15 @@
 }
 
 .mdi-diving-scuba::before {
-  content: "\F0DC1";
+  content: "\F1B77";
 }
 
 .mdi-diving-scuba-flag::before {
   content: "\F0DC2";
+}
+
+.mdi-diving-scuba-mask::before {
+  content: "\F0DC1";
 }
 
 .mdi-diving-scuba-tank::before {
@@ -9894,6 +10030,22 @@
   content: "\F0D42";
 }
 
+.mdi-email-arrow-left::before {
+  content: "\F10DA";
+}
+
+.mdi-email-arrow-left-outline::before {
+  content: "\F10DB";
+}
+
+.mdi-email-arrow-right::before {
+  content: "\F10DC";
+}
+
+.mdi-email-arrow-right-outline::before {
+  content: "\F10DD";
+}
+
 .mdi-email-box::before {
   content: "\F0D03";
 }
@@ -9924,6 +10076,10 @@
 
 .mdi-email-lock::before {
   content: "\F01F1";
+}
+
+.mdi-email-lock-outline::before {
+  content: "\F1B61";
 }
 
 .mdi-email-mark-as-unread::before {
@@ -9986,14 +10142,6 @@
   content: "\F09EC";
 }
 
-.mdi-email-receive::before {
-  content: "\F10DA";
-}
-
-.mdi-email-receive-outline::before {
-  content: "\F10DB";
-}
-
 .mdi-email-remove::before {
   content: "\F1661";
 }
@@ -10016,14 +10164,6 @@
 
 .mdi-email-search-outline::before {
   content: "\F0962";
-}
-
-.mdi-email-send::before {
-  content: "\F10DC";
-}
-
-.mdi-email-send-outline::before {
-  content: "\F10DD";
 }
 
 .mdi-email-sync::before {
@@ -11586,8 +11726,40 @@
   content: "\F0240";
 }
 
+.mdi-flag-variant-minus::before {
+  content: "\F1BB4";
+}
+
+.mdi-flag-variant-minus-outline::before {
+  content: "\F1BB5";
+}
+
+.mdi-flag-variant-off::before {
+  content: "\F1BB0";
+}
+
+.mdi-flag-variant-off-outline::before {
+  content: "\F1BB1";
+}
+
 .mdi-flag-variant-outline::before {
   content: "\F023E";
+}
+
+.mdi-flag-variant-plus::before {
+  content: "\F1BB2";
+}
+
+.mdi-flag-variant-plus-outline::before {
+  content: "\F1BB3";
+}
+
+.mdi-flag-variant-remove::before {
+  content: "\F1BB6";
+}
+
+.mdi-flag-variant-remove-outline::before {
+  content: "\F1BB7";
 }
 
 .mdi-flare::before {
@@ -12634,6 +12806,10 @@
   content: "\F1860";
 }
 
+.mdi-format-list-group-plus::before {
+  content: "\F1B56";
+}
+
 .mdi-format-list-numbered::before {
   content: "\F027B";
 }
@@ -12672,6 +12848,14 @@
 
 .mdi-format-pilcrow::before {
   content: "\F06D8";
+}
+
+.mdi-format-pilcrow-arrow-left::before {
+  content: "\F0286";
+}
+
+.mdi-format-pilcrow-arrow-right::before {
+  content: "\F0285";
 }
 
 .mdi-format-quote-close::before {
@@ -12772,14 +12956,6 @@
 
 .mdi-format-textbox::before {
   content: "\F0D11";
-}
-
-.mdi-format-textdirection-l-to-r::before {
-  content: "\F0285";
-}
-
-.mdi-format-textdirection-r-to-l::before {
-  content: "\F0286";
 }
 
 .mdi-format-title::before {
@@ -13483,6 +13659,10 @@
 }
 
 .mdi-globe-light::before {
+  content: "\F066F";
+}
+
+.mdi-globe-light-outline::before {
   content: "\F12D7";
 }
 
@@ -13582,14 +13762,6 @@
   content: "\F11F6";
 }
 
-.mdi-google-controller::before {
-  content: "\F02B4";
-}
-
-.mdi-google-controller-off::before {
-  content: "\F02B5";
-}
-
 .mdi-google-downasaur::before {
   content: "\F1362";
 }
@@ -13612,10 +13784,6 @@
 
 .mdi-google-hangouts::before {
   content: "\F02C9";
-}
-
-.mdi-google-home::before {
-  content: "\F0824";
 }
 
 .mdi-google-keep::before {
@@ -13862,6 +14030,10 @@
   content: "\F1890";
 }
 
+.mdi-hand-cycle::before {
+  content: "\F1B9C";
+}
+
 .mdi-hand-extended::before {
   content: "\F18B6";
 }
@@ -13992,6 +14164,10 @@
 
 .mdi-hazard-lights::before {
   content: "\F0C89";
+}
+
+.mdi-hdmi-port::before {
+  content: "\F1BB8";
 }
 
 .mdi-hdr::before {
@@ -14606,6 +14782,14 @@
   content: "\F13B1";
 }
 
+.mdi-home-silo::before {
+  content: "\F1BA0";
+}
+
+.mdi-home-silo-outline::before {
+  content: "\F1BA1";
+}
+
 .mdi-home-switch::before {
   content: "\F1794";
 }
@@ -14840,6 +15024,10 @@
 
 .mdi-human-scooter::before {
   content: "\F11E9";
+}
+
+.mdi-human-walker::before {
+  content: "\F1B71";
 }
 
 .mdi-human-wheelchair::before {
@@ -15554,6 +15742,10 @@
   content: "\F09FC";
 }
 
+.mdi-knob::before {
+  content: "\F1B96";
+}
+
 .mdi-koala::before {
   content: "\F173F";
 }
@@ -15902,7 +16094,7 @@
   content: "\F0DD8";
 }
 
-.mdi-lecturn::before {
+.mdi-lectern::before {
   content: "\F1AF0";
 }
 
@@ -16260,6 +16452,14 @@
 
 .mdi-liquor::before {
   content: "\F191E";
+}
+
+.mdi-list-box::before {
+  content: "\F1B7B";
+}
+
+.mdi-list-box-outline::before {
+  content: "\F1B7C";
 }
 
 .mdi-list-status::before {
@@ -16982,6 +17182,14 @@
   content: "\F06A3";
 }
 
+.mdi-message-check::before {
+  content: "\F1B8A";
+}
+
+.mdi-message-check-outline::before {
+  content: "\F1B8B";
+}
+
 .mdi-message-cog::before {
   content: "\F06F1";
 }
@@ -17172,6 +17380,14 @@
 
 .mdi-microphone::before {
   content: "\F036C";
+}
+
+.mdi-microphone-message::before {
+  content: "\F050A";
+}
+
+.mdi-microphone-message-off::before {
+  content: "\F050B";
 }
 
 .mdi-microphone-minus::before {
@@ -17611,6 +17827,10 @@
 }
 
 .mdi-mosque::before {
+  content: "\F0D45";
+}
+
+.mdi-mosque-outline::before {
   content: "\F1827";
 }
 
@@ -17910,12 +18130,24 @@
   content: "\F1670";
 }
 
+.mdi-mower-bag-on::before {
+  content: "\F1B60";
+}
+
+.mdi-mower-on::before {
+  content: "\F1B5F";
+}
+
 .mdi-muffin::before {
   content: "\F098C";
 }
 
 .mdi-multicast::before {
   content: "\F1893";
+}
+
+.mdi-multimedia::before {
+  content: "\F1B97";
 }
 
 .mdi-multiplication::before {
@@ -18028,6 +18260,10 @@
 
 .mdi-music-note-half-dotted::before {
   content: "\F0F72";
+}
+
+.mdi-music-note-minus::before {
+  content: "\F1B89";
 }
 
 .mdi-music-note-off::before {
@@ -18918,8 +19154,32 @@
   content: "\F1521";
 }
 
+.mdi-office-building-minus::before {
+  content: "\F1BAA";
+}
+
+.mdi-office-building-minus-outline::before {
+  content: "\F1BAB";
+}
+
 .mdi-office-building-outline::before {
   content: "\F151F";
+}
+
+.mdi-office-building-plus::before {
+  content: "\F1BA8";
+}
+
+.mdi-office-building-plus-outline::before {
+  content: "\F1BA9";
+}
+
+.mdi-office-building-remove::before {
+  content: "\F1BAC";
+}
+
+.mdi-office-building-remove-outline::before {
+  content: "\F1BAD";
 }
 
 .mdi-oil::before {
@@ -19400,6 +19660,14 @@
 
 .mdi-pause::before {
   content: "\F03E4";
+}
+
+.mdi-pause-box::before {
+  content: "\F00BC";
+}
+
+.mdi-pause-box-outline::before {
+  content: "\F1B7A";
 }
 
 .mdi-pause-circle::before {
@@ -20546,6 +20814,10 @@
   content: "\F0997";
 }
 
+.mdi-progress-helper::before {
+  content: "\F1BA2";
+}
+
 .mdi-progress-pencil::before {
   content: "\F1787";
 }
@@ -20939,11 +21211,15 @@
 }
 
 .mdi-receipt::before {
-  content: "\F0449";
+  content: "\F0824";
 }
 
 .mdi-receipt-outline::before {
-  content: "\F19DC";
+  content: "\F04F7";
+}
+
+.mdi-receipt-text::before {
+  content: "\F0449";
 }
 
 .mdi-receipt-text-check::before {
@@ -20960,6 +21236,10 @@
 
 .mdi-receipt-text-minus-outline::before {
   content: "\F1A66";
+}
+
+.mdi-receipt-text-outline::before {
+  content: "\F19DC";
 }
 
 .mdi-receipt-text-plus::before {
@@ -21514,8 +21794,16 @@
   content: "\F070D";
 }
 
+.mdi-robot-vacuum-alert::before {
+  content: "\F1B5D";
+}
+
 .mdi-robot-vacuum-variant::before {
   content: "\F0908";
+}
+
+.mdi-robot-vacuum-variant-alert::before {
+  content: "\F1B5E";
 }
 
 .mdi-rocket::before {
@@ -22064,6 +22352,14 @@
 
 .mdi-select-all::before {
   content: "\F0486";
+}
+
+.mdi-select-arrow-down::before {
+  content: "\F1B59";
+}
+
+.mdi-select-arrow-up::before {
+  content: "\F1B58";
 }
 
 .mdi-select-color::before {
@@ -22746,6 +23042,10 @@
   content: "\F0782";
 }
 
+.mdi-sign-yield::before {
+  content: "\F1BAF";
+}
+
 .mdi-signal::before {
   content: "\F04A2";
 }
@@ -22819,6 +23119,10 @@
 }
 
 .mdi-silo::before {
+  content: "\F1B9F";
+}
+
+.mdi-silo-outline::before {
   content: "\F0B49";
 }
 
@@ -23534,6 +23838,18 @@
   content: "\F04C4";
 }
 
+.mdi-speaker-pause::before {
+  content: "\F1B73";
+}
+
+.mdi-speaker-play::before {
+  content: "\F1B72";
+}
+
+.mdi-speaker-stop::before {
+  content: "\F1B74";
+}
+
 .mdi-speaker-wireless::before {
   content: "\F071F";
 }
@@ -24130,8 +24446,48 @@
   content: "\F07C7";
 }
 
+.mdi-storefront-check::before {
+  content: "\F1B7D";
+}
+
+.mdi-storefront-check-outline::before {
+  content: "\F1B7E";
+}
+
+.mdi-storefront-edit::before {
+  content: "\F1B7F";
+}
+
+.mdi-storefront-edit-outline::before {
+  content: "\F1B80";
+}
+
+.mdi-storefront-minus::before {
+  content: "\F1B83";
+}
+
+.mdi-storefront-minus-outline::before {
+  content: "\F1B84";
+}
+
 .mdi-storefront-outline::before {
   content: "\F10C1";
+}
+
+.mdi-storefront-plus::before {
+  content: "\F1B81";
+}
+
+.mdi-storefront-plus-outline::before {
+  content: "\F1B82";
+}
+
+.mdi-storefront-remove::before {
+  content: "\F1B85";
+}
+
+.mdi-storefront-remove-outline::before {
+  content: "\F1B86";
 }
 
 .mdi-stove::before {
@@ -24490,6 +24846,10 @@
   content: "\F13C3";
 }
 
+.mdi-table-filter::before {
+  content: "\F1B8C";
+}
+
 .mdi-table-furniture::before {
   content: "\F05BC";
 }
@@ -24620,10 +24980,6 @@
 
 .mdi-tablet::before {
   content: "\F04F6";
-}
-
-.mdi-tablet-android::before {
-  content: "\F04F7";
 }
 
 .mdi-tablet-cellphone::before {
@@ -25042,14 +25398,6 @@
   content: "\F09A9";
 }
 
-.mdi-text-to-speech::before {
-  content: "\F050A";
-}
-
-.mdi-text-to-speech-off::before {
-  content: "\F050B";
-}
-
 .mdi-texture::before {
   content: "\F050C";
 }
@@ -25250,14 +25598,6 @@
   content: "\F11FC";
 }
 
-.mdi-timeline-help::before {
-  content: "\F0F99";
-}
-
-.mdi-timeline-help-outline::before {
-  content: "\F0F9A";
-}
-
 .mdi-timeline-minus::before {
   content: "\F1534";
 }
@@ -25276,6 +25616,14 @@
 
 .mdi-timeline-plus-outline::before {
   content: "\F0F97";
+}
+
+.mdi-timeline-question::before {
+  content: "\F0F99";
+}
+
+.mdi-timeline-question-outline::before {
+  content: "\F0F9A";
 }
 
 .mdi-timeline-remove::before {
@@ -25938,6 +26286,10 @@
   content: "\F0E06";
 }
 
+.mdi-translate-variant::before {
+  content: "\F1B99";
+}
+
 .mdi-transmission-tower::before {
   content: "\F0D3E";
 }
@@ -26511,6 +26863,22 @@
 }
 
 .mdi-vector-point::before {
+  content: "\F01C4";
+}
+
+.mdi-vector-point-edit::before {
+  content: "\F09E8";
+}
+
+.mdi-vector-point-minus::before {
+  content: "\F1B78";
+}
+
+.mdi-vector-point-plus::before {
+  content: "\F1B79";
+}
+
+.mdi-vector-point-select::before {
   content: "\F055F";
 }
 
@@ -27182,6 +27550,10 @@
   content: "\F11B3";
 }
 
+.mdi-water-boiler-auto::before {
+  content: "\F1B98";
+}
+
 .mdi-water-boiler-off::before {
   content: "\F11B4";
 }
@@ -27336,6 +27708,10 @@
 
 .mdi-weather-cloudy-clock::before {
   content: "\F18F6";
+}
+
+.mdi-weather-dust::before {
+  content: "\F1B5A";
 }
 
 .mdi-weather-fog::before {
@@ -27822,6 +28198,10 @@
   content: "\F111D";
 }
 
+.mdi-window-shutter-auto::before {
+  content: "\F1BA3";
+}
+
 .mdi-window-shutter-cog::before {
   content: "\F1A8A";
 }
@@ -27870,8 +28250,28 @@
   content: "\F05B7";
 }
 
+.mdi-wrench-check::before {
+  content: "\F1B8F";
+}
+
+.mdi-wrench-check-outline::before {
+  content: "\F1B90";
+}
+
 .mdi-wrench-clock::before {
   content: "\F19A3";
+}
+
+.mdi-wrench-clock-outline::before {
+  content: "\F1B93";
+}
+
+.mdi-wrench-cog::before {
+  content: "\F1B91";
+}
+
+.mdi-wrench-cog-outline::before {
+  content: "\F1B92";
 }
 
 .mdi-wrench-outline::before {
