--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "normal";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "6.9.96" !default;
+$mdi-version:          "7.0.96" !default;
 
 $mdi-icons: (
   "ab-testing": F01C9,
@@ -41,6 +41,8 @@ $mdi-icons: (
   "account-box-outline": F0007,
   "account-cancel": F12DF,
   "account-cancel-outline": F12E0,
+  "account-card": F1BA4,
+  "account-card-outline": F1BA5,
   "account-cash": F1097,
   "account-cash-outline": F1098,
   "account-check": F0008,
@@ -58,6 +60,8 @@ $mdi-icons: (
   "account-convert-outline": F1301,
   "account-cowboy-hat": F0E9B,
   "account-cowboy-hat-outline": F17F3,
+  "account-credit-card": F1BA6,
+  "account-credit-card-outline": F1BA7,
   "account-details": F0631,
   "account-details-outline": F1372,
   "account-edit": F06BC,
@@ -147,6 +151,7 @@ $mdi-icons: (
   "air-humidifier": F1099,
   "air-humidifier-off": F1466,
   "air-purifier": F0D44,
+  "air-purifier-off": F1B57,
   "airbag": F0BE9,
   "airballoon": F001C,
   "airballoon-outline": F100B,
@@ -367,7 +372,6 @@ $mdi-icons: (
   "amplifier-off": F11B5,
   "anchor": F0031,
   "android": F0032,
-  "android-messages": F0D45,
   "android-studio": F0034,
   "angle-acute": F0937,
   "angle-obtuse": F0938,
@@ -632,6 +636,7 @@ $mdi-icons: (
   "arrow-up-thin": F19B2,
   "arrow-up-thin-circle-outline": F1597,
   "arrow-vertical-lock": F115C,
+  "artboard": F1B9A,
   "artstation": F0B5B,
   "aspect-ratio": F0A24,
   "assistant": F0064,
@@ -649,6 +654,7 @@ $mdi-icons: (
   "attachment-off": F1AC3,
   "attachment-plus": F1AC4,
   "attachment-remove": F1AC5,
+  "atv": F1B70,
   "audio-input-rca": F186B,
   "audio-input-stereo-minijack": F186C,
   "audio-input-xlr": F186D,
@@ -661,6 +667,8 @@ $mdi-icons: (
   "autorenew": F006A,
   "autorenew-off": F19E7,
   "av-timer": F006B,
+  "awning": F1B87,
+  "awning-outline": F1B88,
   "aws": F0E0F,
   "axe": F08C8,
   "axe-battle": F1842,
@@ -874,6 +882,7 @@ $mdi-icons: (
   "beaker-remove": F1233,
   "beaker-remove-outline": F1234,
   "bed": F02E3,
+  "bed-clock": F1B94,
   "bed-double": F0FD4,
   "bed-double-outline": F0FD3,
   "bed-empty": F08A0,
@@ -1035,10 +1044,11 @@ $mdi-icons: (
   "book-sync": F169C,
   "book-sync-outline": F16C8,
   "book-variant": F00BF,
-  "book-variant-multiple": F00BC,
   "bookmark": F00C0,
+  "bookmark-box": F1B75,
   "bookmark-box-multiple": F196C,
   "bookmark-box-multiple-outline": F196D,
+  "bookmark-box-outline": F1B76,
   "bookmark-check": F00C1,
   "bookmark-check-outline": F137B,
   "bookmark-minus": F09CC,
@@ -1226,8 +1236,11 @@ $mdi-icons: (
   "calendar-account": F0ED7,
   "calendar-account-outline": F0ED8,
   "calendar-alert": F0A31,
+  "calendar-alert-outline": F1B62,
   "calendar-arrow-left": F1134,
   "calendar-arrow-right": F1135,
+  "calendar-badge": F1B9D,
+  "calendar-badge-outline": F1B9E,
   "calendar-blank": F00EE,
   "calendar-blank-multiple": F1073,
   "calendar-blank-outline": F0B66,
@@ -1236,26 +1249,40 @@ $mdi-icons: (
   "calendar-clock": F00F0,
   "calendar-clock-outline": F16E1,
   "calendar-collapse-horizontal": F189D,
+  "calendar-collapse-horizontal-outline": F1B63,
   "calendar-cursor": F157B,
+  "calendar-cursor-outline": F1B64,
   "calendar-edit": F08A7,
+  "calendar-edit-outline": F1B65,
   "calendar-end": F166C,
+  "calendar-end-outline": F1B66,
   "calendar-expand-horizontal": F189E,
+  "calendar-expand-horizontal-outline": F1B67,
   "calendar-export": F0B24,
+  "calendar-export-outline": F1B68,
   "calendar-filter": F1A32,
   "calendar-filter-outline": F1A33,
   "calendar-heart": F09D2,
+  "calendar-heart-outline": F1B69,
   "calendar-import": F0B25,
+  "calendar-import-outline": F1B6A,
   "calendar-lock": F1641,
+  "calendar-lock-open": F1B5B,
+  "calendar-lock-open-outline": F1B5C,
   "calendar-lock-outline": F1642,
   "calendar-minus": F0D5C,
+  "calendar-minus-outline": F1B6B,
   "calendar-month": F0E17,
   "calendar-month-outline": F0E18,
   "calendar-multiple": F00F1,
   "calendar-multiple-check": F00F2,
   "calendar-multiselect": F0A32,
+  "calendar-multiselect-outline": F1B55,
   "calendar-outline": F0B67,
   "calendar-plus": F00F3,
+  "calendar-plus-outline": F1B6C,
   "calendar-question": F0692,
+  "calendar-question-outline": F1B6D,
   "calendar-range": F0679,
   "calendar-range-outline": F0B68,
   "calendar-refresh": F01E1,
@@ -1263,9 +1290,11 @@ $mdi-icons: (
   "calendar-remove": F00F4,
   "calendar-remove-outline": F0C45,
   "calendar-search": F094C,
+  "calendar-search-outline": F1B6E,
   "calendar-star": F09D3,
   "calendar-star-outline": F1B53,
   "calendar-start": F166D,
+  "calendar-start-outline": F1B6F,
   "calendar-sync": F0E8E,
   "calendar-sync-outline": F0E8F,
   "calendar-text": F00F5,
@@ -1383,6 +1412,8 @@ $mdi-icons: (
   "car-outline": F14ED,
   "car-parking-lights": F0D63,
   "car-pickup": F07AA,
+  "car-search": F1B8D,
+  "car-search-outline": F1B8E,
   "car-seat": F0FA4,
   "car-seat-cooler": F0FA5,
   "car-seat-heater": F0FA6,
@@ -1471,6 +1502,7 @@ $mdi-icons: (
   "cart-minus": F0D68,
   "cart-off": F066B,
   "cart-outline": F0111,
+  "cart-percent": F1BAE,
   "cart-plus": F0112,
   "cart-remove": F0D69,
   "cart-variant": F15EB,
@@ -1856,6 +1888,7 @@ $mdi-icons: (
   "cloud-tags": F07B6,
   "cloud-upload": F0167,
   "cloud-upload-outline": F0B7E,
+  "clouds": F1B95,
   "clover": F0816,
   "coach-lamp": F1020,
   "coach-lamp-variant": F1A37,
@@ -2015,8 +2048,10 @@ $mdi-icons: (
   "contrast": F0195,
   "contrast-box": F0196,
   "contrast-circle": F0197,
+  "controller": F02B4,
   "controller-classic": F0B82,
   "controller-classic-outline": F0B83,
+  "controller-off": F02B5,
   "cookie": F0198,
   "cookie-alert": F16D0,
   "cookie-alert-outline": F16D1,
@@ -2165,6 +2200,7 @@ $mdi-icons: (
   "currency-sign": F07BE,
   "currency-try": F01B2,
   "currency-twd": F07BF,
+  "currency-uah": F1B9B,
   "currency-usd": F01C1,
   "currency-usd-off": F067A,
   "current-ac": F1480,
@@ -2278,8 +2314,6 @@ $mdi-icons: (
   "desk-lamp-on": F1B20,
   "deskphone": F01C3,
   "desktop-classic": F07C0,
-  "desktop-mac": F01C4,
-  "desktop-mac-dashboard": F09E8,
   "desktop-tower": F01C5,
   "desktop-tower-monitor": F0AAB,
   "details": F01C6,
@@ -2329,7 +2363,6 @@ $mdi-icons: (
   "disc": F05EE,
   "disc-alert": F01D1,
   "disc-player": F0960,
-  "discord": F066F,
   "dishwasher": F0AAC,
   "dishwasher-alert": F11B8,
   "dishwasher-off": F11B9,
@@ -2344,8 +2377,9 @@ $mdi-icons: (
   "diving": F1977,
   "diving-flippers": F0DBF,
   "diving-helmet": F0DC0,
-  "diving-scuba": F0DC1,
+  "diving-scuba": F1B77,
   "diving-scuba-flag": F0DC2,
+  "diving-scuba-mask": F0DC1,
   "diving-scuba-tank": F0DC3,
   "diving-scuba-tank-multiple": F0DC4,
   "diving-snorkel": F0DC5,
@@ -2477,6 +2511,10 @@ $mdi-icons: (
   "email": F01EE,
   "email-alert": F06CF,
   "email-alert-outline": F0D42,
+  "email-arrow-left": F10DA,
+  "email-arrow-left-outline": F10DB,
+  "email-arrow-right": F10DC,
+  "email-arrow-right-outline": F10DD,
   "email-box": F0D03,
   "email-check": F0AB1,
   "email-check-outline": F0AB2,
@@ -2485,6 +2523,7 @@ $mdi-icons: (
   "email-fast": F186F,
   "email-fast-outline": F1870,
   "email-lock": F01F1,
+  "email-lock-outline": F1B61,
   "email-mark-as-unread": F0B92,
   "email-minus": F0EE5,
   "email-minus-outline": F0EE6,
@@ -2500,16 +2539,12 @@ $mdi-icons: (
   "email-outline": F01F0,
   "email-plus": F09EB,
   "email-plus-outline": F09EC,
-  "email-receive": F10DA,
-  "email-receive-outline": F10DB,
   "email-remove": F1661,
   "email-remove-outline": F1662,
   "email-seal": F195B,
   "email-seal-outline": F195C,
   "email-search": F0961,
   "email-search-outline": F0962,
-  "email-send": F10DC,
-  "email-send-outline": F10DD,
   "email-sync": F12C7,
   "email-sync-outline": F12C8,
   "email-variant": F05F0,
@@ -2900,7 +2935,15 @@ $mdi-icons: (
   "flag-remove-outline": F10B4,
   "flag-triangle": F023F,
   "flag-variant": F0240,
+  "flag-variant-minus": F1BB4,
+  "flag-variant-minus-outline": F1BB5,
+  "flag-variant-off": F1BB0,
+  "flag-variant-off-outline": F1BB1,
   "flag-variant-outline": F023E,
+  "flag-variant-plus": F1BB2,
+  "flag-variant-plus-outline": F1BB3,
+  "flag-variant-remove": F1BB6,
+  "flag-variant-remove-outline": F1BB7,
   "flare": F0D72,
   "flash": F0241,
   "flash-alert": F0EF7,
@@ -3162,6 +3205,7 @@ $mdi-icons: (
   "format-list-checkbox": F096A,
   "format-list-checks": F0756,
   "format-list-group": F1860,
+  "format-list-group-plus": F1B56,
   "format-list-numbered": F027B,
   "format-list-numbered-rtl": F0D0D,
   "format-list-text": F126F,
@@ -3172,6 +3216,8 @@ $mdi-icons: (
   "format-paragraph": F027D,
   "format-paragraph-spacing": F1AFD,
   "format-pilcrow": F06D8,
+  "format-pilcrow-arrow-left": F0286,
+  "format-pilcrow-arrow-right": F0285,
   "format-quote-close": F027E,
   "format-quote-close-outline": F11A8,
   "format-quote-open": F0757,
@@ -3197,8 +3243,6 @@ $mdi-icons: (
   "format-text-wrapping-overflow": F0D0F,
   "format-text-wrapping-wrap": F0D10,
   "format-textbox": F0D11,
-  "format-textdirection-l-to-r": F0285,
-  "format-textdirection-r-to-l": F0286,
   "format-title": F05F4,
   "format-underline": F0287,
   "format-underline-wavy": F18E9,
@@ -3374,7 +3418,8 @@ $mdi-icons: (
   "glass-tulip": F02A8,
   "glass-wine": F0876,
   "glasses": F02AA,
-  "globe-light": F12D7,
+  "globe-light": F066F,
+  "globe-light-outline": F12D7,
   "globe-model": F08E9,
   "gmail": F02AB,
   "gnome": F02AC,
@@ -3399,15 +3444,12 @@ $mdi-icons: (
   "google-circles-group": F02B3,
   "google-classroom": F02C0,
   "google-cloud": F11F6,
-  "google-controller": F02B4,
-  "google-controller-off": F02B5,
   "google-downasaur": F1362,
   "google-drive": F02B6,
   "google-earth": F02B7,
   "google-fit": F096C,
   "google-glass": F02B8,
   "google-hangouts": F02C9,
-  "google-home": F0824,
   "google-keep": F06DC,
   "google-lens": F09F6,
   "google-maps": F05F5,
@@ -3469,6 +3511,7 @@ $mdi-icons: (
   "hand-clap-off": F1A42,
   "hand-coin": F188F,
   "hand-coin-outline": F1890,
+  "hand-cycle": F1B9C,
   "hand-extended": F18B6,
   "hand-extended-outline": F18B7,
   "hand-front-left": F182B,
@@ -3502,6 +3545,7 @@ $mdi-icons: (
   "harddisk-remove": F104C,
   "hat-fedora": F0BA4,
   "hazard-lights": F0C89,
+  "hdmi-port": F1BB8,
   "hdr": F0D7D,
   "hdr-off": F0D7E,
   "head": F135E,
@@ -3655,6 +3699,8 @@ $mdi-icons: (
   "home-roof": F112B,
   "home-search": F13B0,
   "home-search-outline": F13B1,
+  "home-silo": F1BA0,
+  "home-silo-outline": F1BA1,
   "home-switch": F1794,
   "home-switch-outline": F1795,
   "home-thermometer": F0F54,
@@ -3714,6 +3760,7 @@ $mdi-icons: (
   "human-pregnant": F05CF,
   "human-queue": F1571,
   "human-scooter": F11E9,
+  "human-walker": F1B71,
   "human-wheelchair": F138D,
   "human-white-cane": F1981,
   "humble-bundle": F0744,
@@ -3892,6 +3939,7 @@ $mdi-icons: (
   "klingon": F135B,
   "knife": F09FB,
   "knife-military": F09FC,
+  "knob": F1B96,
   "koala": F173F,
   "kodi": F0314,
   "kubernetes": F10FE,
@@ -3979,7 +4027,7 @@ $mdi-icons: (
   "leaf-off": F12D9,
   "leak": F0DD7,
   "leak-off": F0DD8,
-  "lecturn": F1AF0,
+  "lectern": F1AF0,
   "led-off": F032B,
   "led-on": F032C,
   "led-outline": F032D,
@@ -4069,6 +4117,8 @@ $mdi-icons: (
   "lipstick": F13B5,
   "liquid-spot": F1826,
   "liquor": F191E,
+  "list-box": F1B7B,
+  "list-box-outline": F1B7C,
   "list-status": F15AB,
   "litecoin": F0A61,
   "loading": F0772,
@@ -4249,6 +4299,8 @@ $mdi-icons: (
   "message-bookmark-outline": F15AD,
   "message-bulleted": F06A2,
   "message-bulleted-off": F06A3,
+  "message-check": F1B8A,
+  "message-check-outline": F1B8B,
   "message-cog": F06F1,
   "message-cog-outline": F1172,
   "message-draw": F0363,
@@ -4297,6 +4349,8 @@ $mdi-icons: (
   "metronome-tick": F07DB,
   "micro-sd": F07DC,
   "microphone": F036C,
+  "microphone-message": F050A,
+  "microphone-message-off": F050B,
   "microphone-minus": F08B3,
   "microphone-off": F036D,
   "microphone-outline": F036E,
@@ -4406,7 +4460,8 @@ $mdi-icons: (
   "more": F037B,
   "mortar-pestle": F1748,
   "mortar-pestle-plus": F03F1,
-  "mosque": F1827,
+  "mosque": F0D45,
+  "mosque-outline": F1827,
   "mother-heart": F1314,
   "mother-nurse": F0D21,
   "motion": F15B2,
@@ -4481,8 +4536,11 @@ $mdi-icons: (
   "movie-star-outline": F1718,
   "mower": F166F,
   "mower-bag": F1670,
+  "mower-bag-on": F1B60,
+  "mower-on": F1B5F,
   "muffin": F098C,
   "multicast": F1893,
+  "multimedia": F1B97,
   "multiplication": F0382,
   "multiplication-box": F0383,
   "mushroom": F07DF,
@@ -4511,6 +4569,7 @@ $mdi-icons: (
   "music-note-eighth-dotted": F0F71,
   "music-note-half": F0389,
   "music-note-half-dotted": F0F72,
+  "music-note-minus": F1B89,
   "music-note-off": F038A,
   "music-note-off-outline": F0F73,
   "music-note-outline": F0F74,
@@ -4733,7 +4792,13 @@ $mdi-icons: (
   "office-building-cog-outline": F194A,
   "office-building-marker": F1520,
   "office-building-marker-outline": F1521,
+  "office-building-minus": F1BAA,
+  "office-building-minus-outline": F1BAB,
   "office-building-outline": F151F,
+  "office-building-plus": F1BA8,
+  "office-building-plus-outline": F1BA9,
+  "office-building-remove": F1BAC,
+  "office-building-remove-outline": F1BAD,
   "oil": F03C7,
   "oil-lamp": F0F19,
   "oil-level": F1053,
@@ -4854,6 +4919,8 @@ $mdi-icons: (
   "patio-heater": F0F80,
   "patreon": F0882,
   "pause": F03E4,
+  "pause-box": F00BC,
+  "pause-box-outline": F1B7A,
   "pause-circle": F03E5,
   "pause-circle-outline": F03E6,
   "pause-octagon": F03E7,
@@ -5140,6 +5207,7 @@ $mdi-icons: (
   "progress-clock": F0996,
   "progress-close": F110A,
   "progress-download": F0997,
+  "progress-helper": F1BA2,
   "progress-pencil": F1787,
   "progress-question": F1522,
   "progress-star": F1788,
@@ -5238,12 +5306,14 @@ $mdi-icons: (
   "razor-single-edge": F1998,
   "react": F0708,
   "read": F0447,
-  "receipt": F0449,
-  "receipt-outline": F19DC,
+  "receipt": F0824,
+  "receipt-outline": F04F7,
+  "receipt-text": F0449,
   "receipt-text-check": F1A63,
   "receipt-text-check-outline": F1A64,
   "receipt-text-minus": F1A65,
   "receipt-text-minus-outline": F1A66,
+  "receipt-text-outline": F19DC,
   "receipt-text-plus": F1A67,
   "receipt-text-plus-outline": F1A68,
   "receipt-text-remove": F1A69,
@@ -5382,7 +5452,9 @@ $mdi-icons: (
   "robot-off-outline": F167B,
   "robot-outline": F167A,
   "robot-vacuum": F070D,
+  "robot-vacuum-alert": F1B5D,
   "robot-vacuum-variant": F0908,
+  "robot-vacuum-variant-alert": F1B5E,
   "rocket": F0463,
   "rocket-launch": F14DE,
   "rocket-launch-outline": F14DF,
@@ -5520,6 +5592,8 @@ $mdi-icons: (
   "segment": F0ECB,
   "select": F0485,
   "select-all": F0486,
+  "select-arrow-down": F1B59,
+  "select-arrow-up": F1B58,
   "select-color": F0D31,
   "select-compare": F0AD9,
   "select-drag": F0A6C,
@@ -5690,6 +5764,7 @@ $mdi-icons: (
   "sign-pole": F14F8,
   "sign-real-estate": F1118,
   "sign-text": F0782,
+  "sign-yield": F1BAF,
   "signal": F04A2,
   "signal-2g": F0712,
   "signal-3g": F0713,
@@ -5708,7 +5783,8 @@ $mdi-icons: (
   "signature-freehand": F0DFC,
   "signature-image": F0DFD,
   "signature-text": F0DFE,
-  "silo": F0B49,
+  "silo": F1B9F,
+  "silo-outline": F0B49,
   "silverware": F04A3,
   "silverware-clean": F0FDE,
   "silverware-fork": F04A4,
@@ -5887,6 +5963,9 @@ $mdi-icons: (
   "speaker-message": F1B11,
   "speaker-multiple": F0D38,
   "speaker-off": F04C4,
+  "speaker-pause": F1B73,
+  "speaker-play": F1B72,
+  "speaker-stop": F1B74,
   "speaker-wireless": F071F,
   "spear": F1845,
   "speedometer": F04C5,
@@ -6036,7 +6115,17 @@ $mdi-icons: (
   "store-settings": F18D4,
   "store-settings-outline": F18D5,
   "storefront": F07C7,
+  "storefront-check": F1B7D,
+  "storefront-check-outline": F1B7E,
+  "storefront-edit": F1B7F,
+  "storefront-edit-outline": F1B80,
+  "storefront-minus": F1B83,
+  "storefront-minus-outline": F1B84,
   "storefront-outline": F10C1,
+  "storefront-plus": F1B81,
+  "storefront-plus-outline": F1B82,
+  "storefront-remove": F1B85,
+  "storefront-remove-outline": F1B86,
   "stove": F04DE,
   "strategy": F11D6,
   "stretch-to-page": F0F2B,
@@ -6126,6 +6215,7 @@ $mdi-icons: (
   "table-edit": F04F0,
   "table-eye": F1094,
   "table-eye-off": F13C3,
+  "table-filter": F1B8C,
   "table-furniture": F05BC,
   "table-headers-eye": F121D,
   "table-headers-eye-off": F121E,
@@ -6159,7 +6249,6 @@ $mdi-icons: (
   "table-sync": F13A1,
   "table-tennis": F0E68,
   "tablet": F04F6,
-  "tablet-android": F04F7,
   "tablet-cellphone": F09A7,
   "tablet-dashboard": F0ECE,
   "taco": F0762,
@@ -6264,8 +6353,6 @@ $mdi-icons: (
   "text-search-variant": F1A7E,
   "text-shadow": F0669,
   "text-short": F09A9,
-  "text-to-speech": F050A,
-  "text-to-speech-off": F050B,
   "texture": F050C,
   "texture-box": F0FE6,
   "theater": F050D,
@@ -6316,13 +6403,13 @@ $mdi-icons: (
   "timeline-check-outline": F1533,
   "timeline-clock": F11FB,
   "timeline-clock-outline": F11FC,
-  "timeline-help": F0F99,
-  "timeline-help-outline": F0F9A,
   "timeline-minus": F1534,
   "timeline-minus-outline": F1535,
   "timeline-outline": F0BD2,
   "timeline-plus": F0F96,
   "timeline-plus-outline": F0F97,
+  "timeline-question": F0F99,
+  "timeline-question-outline": F0F9A,
   "timeline-remove": F1536,
   "timeline-remove-outline": F1537,
   "timeline-text": F0BD3,
@@ -6488,6 +6575,7 @@ $mdi-icons: (
   "transition-masked": F0916,
   "translate": F05CA,
   "translate-off": F0E06,
+  "translate-variant": F1B99,
   "transmission-tower": F0D3E,
   "transmission-tower-export": F192C,
   "transmission-tower-import": F192D,
@@ -6631,7 +6719,11 @@ $mdi-icons: (
   "vector-intersection": F055D,
   "vector-line": F055E,
   "vector-link": F0FE8,
-  "vector-point": F055F,
+  "vector-point": F01C4,
+  "vector-point-edit": F09E8,
+  "vector-point-minus": F1B78,
+  "vector-point-plus": F1B79,
+  "vector-point-select": F055F,
   "vector-polygon": F0560,
   "vector-polygon-variant": F1856,
   "vector-polyline": F0561,
@@ -6799,6 +6891,7 @@ $mdi-icons: (
   "water-alert-outline": F1503,
   "water-boiler": F0F92,
   "water-boiler-alert": F11B3,
+  "water-boiler-auto": F1B98,
   "water-boiler-off": F11B4,
   "water-check": F1504,
   "water-check-outline": F1505,
@@ -6838,6 +6931,7 @@ $mdi-icons: (
   "weather-cloudy-alert": F0F2F,
   "weather-cloudy-arrow-right": F0E6E,
   "weather-cloudy-clock": F18F6,
+  "weather-dust": F1B5A,
   "weather-fog": F0591,
   "weather-hail": F0592,
   "weather-hazy": F0F30,
@@ -6959,6 +7053,7 @@ $mdi-icons: (
   "window-restore": F05B2,
   "window-shutter": F111C,
   "window-shutter-alert": F111D,
+  "window-shutter-auto": F1BA3,
   "window-shutter-cog": F1A8A,
   "window-shutter-open": F111E,
   "window-shutter-settings": F1A8B,
@@ -6971,7 +7066,12 @@ $mdi-icons: (
   "wrap": F05B6,
   "wrap-disabled": F0BDF,
   "wrench": F05B7,
+  "wrench-check": F1B8F,
+  "wrench-check-outline": F1B90,
   "wrench-clock": F19A3,
+  "wrench-clock-outline": F1B93,
+  "wrench-cog": F1B91,
+  "wrench-cog-outline": F1B92,
   "wrench-outline": F0BE0,
   "xamarin": F0845,
   "xml": F05C0,
